--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
       const texto = document.getElementById('busqueda').value;
       const query = encodeURIComponent(texto);
       const apiKey = '5d91a58517074d7aa379a0c43f7c0325ac00c919004b35f99036784885881ee9';
-      const url = `https://serpapi.com/search.json?engine=google_shopping&q=${query}&api_key=${apiKey}&hl=es&tbm=shop`;
+
+      // 🔓 Proxy CORS para evitar bloqueos
+      const url = `https://api.allorigins.win/raw?url=${encodeURIComponent(
+        `https://serpapi.com/search.json?engine=google_shopping&q=${query}&api_key=${apiKey}&hl=es&tbm=shop`
+      )}`;
+
       document.getElementById('resultados').innerHTML = 'Buscando...';
 
       try {
@@ -50,7 +55,7 @@
 
         document.getElementById('resultados').innerHTML = html || 'No se encontraron productos.';
       } catch (err) {
-        alert('ERROR: ' + err.message); // ← ahora verás el error real
+        alert('ERROR: ' + err.message);
         document.getElementById('resultados').innerText = 'Error: ' + err.message;
         console.error('Error completo:', err);
       }
